final del proyecto
ya esta finalizado el proyecto

--- a/Acciones/defensa.html
+++ b/Acciones/defensa.html
@@ -12,7 +12,18 @@
             <a href="../index.html">
                 <img class="icono" src="../img/icon.png">
             </a>
-            <h1>Programas de Defensa Legal</h1>
+            <div>
+                <h1 class="font">Programas de Defensa Legal</h1>
+                <section>
+                    <details>
+                        <summary>Languages</summary>
+                        <a href="../idiomas/ale/ale-defensa.html">Alemán</a>
+                        <a href="../idiomas/cat/cat-defensa.html">Catalan</a>
+                        <a href="../idiomas/eng/ing-defensa.html">Ingles</a>
+                        <a href="../idiomas/gri/gri-defensa.html">Griego</a>
+                    </details>
+                </section>
+            </div>
     </header>
 
     <section id="defensa">
@@ -53,16 +64,6 @@
                 <div class="servi">
                     <img src="../img/circulo-manos.jpeg" alt="">
                 </div>
-            </div>
-            <br>
-            <br>
-            <div class="servidor">
-                <h3 class="ser-titu">Recursos adicionales:</h3>
-                <ul class="servicios">
-                    <li><a href="../docs/guia_derechos_civiles.pdf" target="_blank">Guía de Derechos Civiles</a></li>
-                    <li><a href="../docs/como_presentar_queja.pdf" target="_blank">Cómo Presentar una Queja por Discriminación</a></li>
-                    <li><a href="../docs/leyes_antidiscriminacion.pdf" target="_blank">Leyes Antidiscriminación en Nuestra Región</a></li>
-                </ul>
             </div>
         </div>
     </section>
