--- a/idiomas/ale/ale-apoyo.html
+++ b/idiomas/ale/ale-apoyo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programme zur Bildungshilfe</title>
     <link rel="stylesheet" href="../../css/apoyo.css">
-    <link type="image/png" sizes="16x16" rel="icon" href=".../../img/logo.png">
+    <link type="image/png" sizes="16x16" rel="icon" href="../../img/logo.png">
 
 </head>
 <body>
